@@ -13,6 +13,7 @@ FEATURE:	Added GDISP_IMAGE_BMP_BLIT_BUFFER_SIZE configuration option
 FEATURE:	Added GDISP_IMAGE_PNG_BLIT_BUFFER_SIZE configuration option
 FEATURE:	Added GDISP_IMAGE_PNG_FILE_BUFFER_SIZE configuration option
 FEATURE:	Added GDISP_IMAGE_PNG_Z_BUFFER_SIZE configuration option
+FEATURE:	Added GDISP_IMAGE_GIF_BLIT_BUFFER_SIZE configuration option
 
 
 *** Release 2.7 ***
